# server/api/services/magasin.service.js
@@ -9,12 +9,21 @@ class MagasinService {
     return client.query('SELECT * FROM magasin where id=' + id + ';');
   }
 
-  create(nom_magasin, lieu_magasin) {
+  byadmin(id) {
+    return client.query(
+      'SELECT * FROM admin mm INNER JOIN magasin  e on mm.id=e.admin_id where e.admin_id=' +
+        id +
+        ';'
+    );
+  }
+  create(nom_magasin, lieu_magasin, admin_id) {
     client.query(
-      "INSERT INTO magasin (nom_magasin, lieu_magasin) VALUES ('" +
+      "INSERT INTO magasin (nom_magasin, lieu_magasin, admin_id) VALUES ('" +
         nom_magasin +
         "', '" +
         lieu_magasin +
+        "', '" +
+        admin_id +
         "');"
     );
     return client.query(
